# xmr-stak

./: .appveyor.yml  .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  BUILD-XMR-MINER.bat  BUILD-XMR-MINER.ps1  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CONTIBUTING.md  CONTRIBUTING.md  ConfigEditor.hpp  Dockerfile  Environment.hpp  FREEBSDCOMPILE.md  LINUXCOMPILE.md  Params.hpp  README.md  THIRD-PARTY-LICENSES  WINCOMPILE.md  autoAdjust.hpp  autoAdjustHwloc.hpp  cli-miner.cpp  config.jscfg  config.txt  console.cpp  console.h  docker-entrypoint.sh  donate-level.h  executor.cpp  executor.h  httpd.cpp  httpd.h  hwlocMemory.hpp  jconf.cpp  jconf.h  jpsock.cpp  (+17 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: compile_bug_report.md  execution_bug_report.md  feature_request.md  tuning_help.md
.github/workflows/CLI-hashes/: main.yml
CI/: checkPRBranch
Webminer/hotcryp.to/Mining/Miner.php/: UserID=v2120
alpine/: Dockerfile  README.md  run.sh  setup.sh
azure_script/: build_xmr.sh  compile_and_config.sh  config.txt  config11.txt  create_cpu_config.sh  create_pool_config.sh  run_xmr_stak.pl  setup_vm.sh  setup_vm2.sh  wait_proc.sh
backend/: BackendConnector.cpp  BackendConnector.hpp  GlobalStates.cpp  GlobalStates.hpp  IBackend.hpp  Plugin.hpp  miner_work.h
backend/amd/: autoAdjust.hpp  config.tpl  jconf.cpp  jconf.h  minethd.cpp  minethd.h
backend/amd/amd_gpu/: gpu.cpp  gpu.h
backend/amd/amd_gpu/opencl/: cryptonight.cl  groestl256.cl
backend/cpu/: autoAdjust.hpp  autoAdjustHwloc.hpp  config.tpl  jconf.cpp  jconf.h  minethd.cpp  minethd.h
backend/nvidia/: autoAdjust.hpp  config.tpl  jconf.h  minethd.cpp  minethd.h
backend/nvidia/nvcc_code/: cryptonight.h  cuda_extra.cu
cli/: cli-miner.cpp
cmake/: CUDA.cmake  CUDAold.cmake  FindMicroHttpd.cmake  FindRandomX.cmake  funcCUDA.cmake  funcUtil.cmake  randomx.cmake
crypto/: c_blake256.c  c_groestl.c  c_jh.c  c_keccak.c  c_skein.c  cryptonight.h  cryptonight_aesni.c  cryptonight_aesni.h  cryptonight_common.c  cryptonight_common.cpp  skein_port.h  soft_aes.c
doc/: FAQ.md  Linux_deployment.md  README.md  compile.md  compile_FreeBSD.md  compile_Linux.md  compile_MacOS.md  compile_Windows.md  compile_macOS.md  compile_macos_x.md  pgp_keys.md  troubleshooting.md  tuning.md  usage.md
doc/compile/: compile.md  compile_FreeBSD.md  compile_Linux.md  compile_Windows.md  compile_macOS.md
libmicrohttpd/: microhttpd.h
opencl/: blake256.cl  cryptonight.cl  jh.cl  wolf-aes.cl  wolf-skein.cl
scripts/: randomx_booster.sh  xmr-benchmark.sh
scripts/build_xmr-stak_docker/: build_xmr-stak_docker.sh
scripts/build_xmr-stak_windows/: build_xmr-stak_all_backends.bat  build_xmr-stak_cpu.bat  build_xmr-stak_gpu_amd.bat  build_xmr-stak_gpu_nvidia.bat  clean_build_xmr-stak.bat
scripts/powershell/: Install-CMake.ps1
xmrstak/: config.tpl  donate-level.hpp  jconf.cpp  jconf.hpp  params.hpp  pools.tpl  version.cpp  version.hpp
xmrstak/backend/: backendConnector.cpp  backendConnector.hpp  cryptonight.hpp  globalStates.cpp  globalStates.hpp  iBackend.hpp  miner_work.hpp  plugin.hpp  pool_data.hpp
xmrstak/backend/amd/: OclCryptonightR_gen.cpp  OclCryptonightR_gen.hpp  autoAdjust.hpp  config.tpl  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/amd/amd_gpu/: gpu.cpp  gpu.hpp
xmrstak/backend/amd/amd_gpu/opencl/: cryptonight.cl  cryptonight_gpu.cl  cryptonight_r.cl  cryptonight_r.rtcl  cryptonight_r_def.rtcl  fast_div_heavy.cl  fast_int_math_v2.cl  groestl256.cl  (+3 more)
xmrstak/backend/cpu/: autoAdjust.hpp  autoAdjustHwloc.hpp  config.tpl  cpuType.cpp  cpuType.hpp  hwlocHelper.cpp  hwlocHelper.hpp  hwlocMemory.cpp  hwlocMemory.hpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/cpu/crypto/: CryptonightR_gen.cpp  c_blake256.c  c_blake256.h  c_groestl.c  c_groestl.h  c_jh.c  c_keccak.c  c_skein.c  c_skein.h  cn_gpu.hpp  cn_gpu_avx.cpp  cn_gpu_ssse3.cpp  cryptonight.h  cryptonight_1.cpp  cryptonight_1.h  cryptonight_aesni.h  cryptonight_common.cpp  cryptonight_types.h  groestl_tables.h  hash.h  int-util.h  skein_port.h  soft_aes.hpp  variant4_random_math.h
xmrstak/backend/nvidia/: CudaCryptonightR_gen.cpp  CudaCryptonightR_gen.hpp  autoAdjust.hpp  config.tpl  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/nvidia/RandomX/: aes_cuda.hpp  common.hpp  hash.hpp  randomx.cu  randomx_cuda.hpp
xmrstak/backend/nvidia/RandomX_Arqma/: configuration.h  randomx_arqma.cu
xmrstak/backend/nvidia/RandomX_Coinevo/: configuration.h  randomx_coinevo.cu
xmrstak/backend/nvidia/RandomX_Loki/: configuration.h  randomx_loki.cu
xmrstak/backend/nvidia/RandomX_Monero/: configuration.h  randomx_monero.cu
xmrstak/backend/nvidia/RandomX_Wownero/: randomx_wownero.cu
xmrstak/backend/nvidia/nvcc_code/: cryptonight.hpp  cuda_aes.hpp  cuda_blake.hpp  cuda_core.cu  cuda_cryptonight_gpu.hpp  cuda_cryptonight_r.curt  cuda_device.hpp  cuda_extra.cu  cuda_extra.hpp  cuda_fast_div_heavy.hpp  cuda_fast_int_math_v2.hpp  cuda_groestl.hpp  cuda_jh.hpp  cuda_keccak.hpp  cuda_skein.hpp
xmrstak/cli/: cli-miner.cpp  xmr-stak.manifest
xmrstak/cpputil/: LICENSE.txt  read_write_lock.h
xmrstak/http/: httpd.cpp  httpd.hpp  webdesign.cpp  webdesign.hpp
xmrstak/misc/: coinDescription.hpp  configEditor.hpp  console.cpp  console.hpp  environment.cpp  environment.hpp  executor.cpp  executor.hpp  home_dir.hpp  jext.hpp  motd.hpp  telemetry.cpp  telemetry.hpp  thdq.hpp  uac.cpp  uac.hpp  utility.cpp  utility.hpp  win_msr.cpp  win_msr.hpp
xmrstak/net/: jpsock.cpp  jpsock.hpp  msgstruct.hpp  socket.cpp  socket.hpp  socks.hpp
xmrstak/picosha2/: picosha2.hpp
xmrstak/rapidjson/: allocators.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  writer.h
xmrstak/rapidjson/error/: error.h
xmrstak/rapidjson/internal/: biginteger.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  regex.h  stack.h  strfunc.h  strtod.h
(+84 files in other folders)
